--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                     <a href="https://freeltc.online/?r=11400" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
 
-<!--
                 <article class="card">
                     <div class="card-header">
                         <img src="images/ftop.png" alt="Feyyora image">
@@ -85,7 +84,7 @@
                     </div>
                     <a href="https://feyorra.top/?r=180567" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
--->
+
                 <article class="card">
                     <div class="card-header">
                         <img src="images/adbtc.jpg" alt="Adbtc image">
@@ -154,7 +153,7 @@
                     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
 
-       <!--         <article class="card">
+            <article class="card">
                     <div class="card-header">
                         <img src="images/ctrx.png" alt="Coinpayz image">
                         <h2>Claimtrx</h2>
@@ -166,7 +165,7 @@
                     </div>
                     <a href="https://claimtrx.com/?r=202861" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
--->
+
                 <article class="card">
                     <div class="card-header">
                         <img src="images/cp.png" alt="Coinpayz image">
