--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <a href="https://freeltc.online/?r=11400" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
 
+
                 <article class="card">
                     <div class="card-header">
                         <img src="images/ftop.png" alt="Feyyora image">
@@ -153,7 +154,7 @@
                     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
 
-            <article class="card">
+                <article class="card">
                     <div class="card-header">
                         <img src="images/ctrx.png" alt="Coinpayz image">
                         <h2>Claimtrx</h2>
@@ -211,18 +212,6 @@
                     <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
-                <article class="card">
-                    <div class="card-header">
-                        <img src="images/blum.jpg" alt="Blum game image">
-                        <h2>Blum</h2>
-                    </div>
-                    <div class="card-content">
-                        <li>Click a button to passively mine for 8 hours.</li>
-                        <li>Play game for more rewards.</li>
-                        <li>Easy tasks, Guaranteed Rewards.</li>
-                    </div>
-                    <a href="https://t.me/BlumCryptoBot/app?startapp=ref_dtqZb0TEqK" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
-                </article>
 
 <article class="card">
                     <div class="card-header">
@@ -235,6 +224,86 @@
                         <li>Join the Farming Pools to earn real coins.</li>
                     </div>
                     <a href="https://t.me/catizenbot/gameapp?startapp=r_3_24703668" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/gatto.jpg" alt="Gatto game image">
+                        <h2>Gatto</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Buy biome to place your pet.</li>
+                        <li>Feed you pet and play with them to earn coins.</li>
+                        <li>Buy more pet, increase their experience to earn more.</li>
+                    </div>
+                    <a href="https://t.me/gatto_gamebot?start=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                                <article class="card">
+                    <div class="card-header">
+                        <img src="images/coincrypto.jpg" alt="Coincrypto game image">
+                        <h2>Coin Crypto</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Get 1 spin every 10 minutes.</li>
+                        <li>Make and upgrade your village.</li>
+                        <li>Earn in TON and wCATCC Token.</li>
+                    </div>
+                    <a href="https://t.me/CoinCryptoGameBot/game?startapp=REF_1UG4BF82" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/catgold.jpg" alt="Cat Gold Miner game image">
+                        <h2>Cat Gold Miner</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Mine Gold. Active and Passive earning.</li>
+                        <li>Earn CATGM, convert CATGM for airdrop vouchers.</li>
+                        <li>Use coins but don't spend CATGM for upgrades.</li>
+                    </div>
+                    <a href="https://t.me/catgoldminerbot?start=club_1001992637400_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                                <article class="card">
+                    <div class="card-header">
+                        <img src="images/okxracer.jpg" alt="OKX Racer game image">
+                        <h2>OKX Racer</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Official game from OKX exchange.</li>
+                        <li>Predict the price change in Bitcoin and win real money.</li>
+                        <li>Guaranteed reward from estblished exchange.</li>
+                    </div>
+                    <a href="https://t.me/OKX_official_bot/OKX_Racer?startapp=linkCode_114912129" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/mobiverse.jpg" alt="Mobiverse image">
+                        <h2>Mobiverse</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>The First mobile metaverse. Huge airdrop coming</li>
+                        <li>Collect gold to get MVER aidrop in future. Activate Fever for faster mining.</li>
+                        <li>Do task to earn Diamond for spin. Join squad for more missions and rewards.</li>
+                    </div>
+                    <a href="http://t.me/mobiverse_bot/game?startapp=Mobiverse_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+
+                
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/blum.jpg" alt="Blum game image">
+                        <h2>Blum</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Click a button to passively mine for 8 hours.</li>
+                        <li>Play game for more rewards.</li>
+                        <li>Easy tasks, Guaranteed Rewards.</li>
+                    </div>
+                    <a href="https://t.me/BlumCryptoBot/app?startapp=ref_dtqZb0TEqK" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
                 <article class="card">
@@ -263,20 +332,9 @@
                     <a href="https://t.me/claytoncoinbot/game?startapp=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
-                <article class="card">
-                    <div class="card-header">
-                        <img src="images/gatto.jpg" alt="Gatto game image">
-                        <h2>Gatto</h2>
-                    </div>
-                    <div class="card-content">
-                        <li>Buy biome to place your pet.</li>
-                        <li>Feed you pet and play with them to earn coins.</li>
-                        <li>Buy more pet, increase their experience to earn more.</li>
-                    </div>
-                    <a href="https://t.me/gatto_gamebot?start=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
-                </article>
 
-                <article class="card">
+
+        <!--        <article class="card">
                     <div class="card-header">
                         <img src="images/tapcoin.jpg" alt="Tapcoin game image">
                         <h2>Tapcoin</h2>
@@ -288,6 +346,8 @@
                     </div>
                     <a href="https://t.me/tapcoinsbot/app?startapp=ref_NRyaEk" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
+
+                -->
 
                 <article class="card">
                     <div class="card-header">
