--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Listfaucet.com provides a comprehensive list of top faucets and Telegram games. Discover the best resources and opportunities with curated links for your needs.">
+    <meta name="description" content="Discover the top faucets and Telegram games on Listfaucet.com. Find high-paying opportunities and exciting games with curated links and detailed reviews.">
     <meta name="keywords" content="faucets, Telegram games, top faucets, best faucets, faucet sites, gaming faucets">
     <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Listfaucet.com - Top Faucets and Telegram Games">
+    <meta property="og:description" content="Discover top faucets and Telegram games with detailed reviews and high-paying opportunities.">
+    <meta property="og:image" content="images/og-image.jpg">
+    <meta property="og:url" content="https://www.listfaucet.com">
     <title>Listfaucet.com - Top Faucets and Telegram Games</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Favicon for branding -->
-        <!-- Google Tag Manager -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MNBV9PH2F"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-6MNBV9PH2F');
-        </script>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MNBV9PH2F"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-6MNBV9PH2F');
+    </script>
 </head>
 <body>
     <header>
-        <h1>Listfaucet.com</h1>
-        <h2>All links open in new tab</h2>
+        <h1>Listfaucet.com - Discover Top Faucets and Telegram Games</h1>
+        <h2>All links open in a new tab for your convenience</h2>
     </header>
     <nav>
         <ul>
@@ -38,24 +42,24 @@
                         <img src="images/vie.png" alt="Viefaucet: Top faucet site image">
                         <h2>Viefaucet</h2>
                     </div>
-                    <div class="card-content">
-                    <li>$0.00065 every 4 minutes. Easy captcha.</li>
-                    <li>High paying Shortlinks, Daily bonus, coupon, Offerwalls, PTC.</li>
-                    <li>$0.005 minimum payout to FaucetPay and Cwallet.</li>
-                    </div>
+                    <ul class="card-content">
+                        <li>$0.00065 every 4 minutes. Easy captcha.</li>
+                        <li>High paying Shortlinks, Daily bonus, coupon, Offerwalls, PTC.</li>
+                        <li>$0.005 minimum payout to FaucetPay and Cwallet.</li>
+                    </ul>
                     <a href="https://viefaucet.com/?r=61e83d585cc8356fa4bda9a9" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
-
+                
                 <article class="card">
                     <div class="card-header">
                         <img src="images/ebm.gif" alt="Earnbitmoon image">
                         <h2>Earnbitmoon</h2>
                     </div>
-                    <div class="card-content">
-                    <li>$0.0005+ every 5 minutes. Easy captcha.</li>
-                    <li>High paying Offerwalls. Daily Bonus, Shortlinks, PTC.</li>
-                    <li>$0.2 minimum payout to FaucetPay, Payeer and Wallet.</li>
-                    </div>
+                    <ul class="card-content">
+                        <li>$0.0005+ every 5 minutes. Easy captcha.</li>
+                        <li>High paying Offerwalls. Daily Bonus, Shortlinks, PTC.</li>
+                        <li>$0.2 minimum payout to FaucetPay, Payeer, and Wallet.</li>
+                    </ul>
                     <a href="https://earnbitmoon.club/?ref=145452" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
 
@@ -192,7 +196,6 @@
                     </div>
                     <a href="https://hatecoin.me/?r=52066" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
-
             </div>
         </section>
 
@@ -204,25 +207,24 @@
                         <img src="images/hk.jpg" alt="Hamster Kombat image">
                         <h2>Hamster Kombat</h2>
                     </div>
-                    <div class="card-content">
+                    <ul class="card-content">
                         <li>Most Popular Tap Game.</li>
                         <li>Daily Reward, Cipher, Combo for more coins, Play Minigame for keys.</li>
-                        <li>Passive earnig as you upgrade cards.</li>
-                    </div>
+                        <li>Passive earning as you upgrade cards.</li>
+                    </ul>
                     <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
-
-<article class="card">
+                <article class="card">
                     <div class="card-header">
                         <img src="images/cat.jpg" alt="Catizen game image">
                         <h2>Catizen</h2>
                     </div>
-                    <div class="card-content">
+                    <ul class="card-content">
                         <li>Place cats and combine them to earn coins.</li>
                         <li>Free 2x Speed boost available every 2 hours.</li>
                         <li>Join the Farming Pools to earn real coins.</li>
-                    </div>
+                    </ul>
                     <a href="https://t.me/catizenbot/gameapp?startapp=r_3_24703668" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
@@ -375,18 +377,22 @@
                     <a href="https://t.me/seed_coin_bot/app?startapp=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
+
             </div>
         </section>
     </main>
     <footer>
-        <div>
-            <script src="//static.surfe.pro/js/net.js"></script>
-            <ins class="surfe-be" data-sid="385863"></ins>
-            <script>(adsurfebe = window.adsurfebe || []).push({});</script>
-            <iframe data-aa='2298644' src='//ad.a-ads.com/2298644?size=300x250' style='width:300px; height:250px; border:0; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+        <div class="footer-content">
+            <div class="ads">
+                <iframe data-aa='2298644' src='//ad.a-ads.com/2298644?size=300x250' style='width:300px; height:250px; border:0; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+            </div>
+            <div class="footer-links">
+                <a href="/privacy-policy">Privacy Policy</a>
+                <a href="/terms-of-service">Terms of Service</a>
+                <a href="/contact">Contact Us</a>
+            </div>
+            <p>© 2024 Listfaucet.com. All rights reserved.</p>
         </div>
-
-        <p>© 2024 Listfaucet.com. All rights reserved.</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
