--- a/index.html
+++ b/index.html
@@ -217,39 +217,13 @@
 
                 <article class="card">
                     <div class="card-header">
-                        <img src="images/cat.jpg" alt="Catizen game image">
-                        <h2>Catizen</h2>
-                    </div>
-                    <ul class="card-content">
-                        <li>Place cats and combine them to earn coins.</li>
-                        <li>Free 2x Speed boost available every 2 hours.</li>
-                        <li>Join the Farming Pools to earn real coins.</li>
-                    </ul>
-                    <a href="https://t.me/catizenbot/gameapp?startapp=r_3_24703668" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
-                </article>
-
-                <article class="card">
-                    <div class="card-header">
-                        <img src="images/gatto.jpg" alt="Gatto game image">
-                        <h2>Gatto</h2>
-                    </div>
-                    <div class="card-content">
-                        <li>Buy biome to place your pet.</li>
-                        <li>Feed you pet and play with them to earn coins.</li>
-                        <li>Buy more pet, increase their experience to earn more.</li>
-                    </div>
-                    <a href="https://t.me/gatto_gamebot?start=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
-                </article>
-
-                                <article class="card">
-                    <div class="card-header">
                         <img src="images/coincrypto.jpg" alt="Coincrypto game image">
                         <h2>Coin Crypto</h2>
                     </div>
                     <div class="card-content">
                         <li>Get 1 spin every 10 minutes.</li>
                         <li>Make and upgrade your village.</li>
-                        <li>Earn in TON and wCATCC Token.</li>
+                        <li>Earn in TON and wCATCC Token. First round of Airdrop already decided.</li>
                     </div>
                     <a href="https://t.me/CoinCryptoGameBot/game?startapp=REF_1UG4BF82" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
@@ -267,19 +241,6 @@
                     <a href="https://t.me/catgoldminerbot?start=club_1001992637400_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
-                                <article class="card">
-                    <div class="card-header">
-                        <img src="images/okxracer.jpg" alt="OKX Racer game image">
-                        <h2>OKX Racer</h2>
-                    </div>
-                    <div class="card-content">
-                        <li>Official game from OKX exchange.</li>
-                        <li>Predict the price change in Bitcoin and win real money.</li>
-                        <li>Guaranteed reward from estblished exchange.</li>
-                    </div>
-                    <a href="https://t.me/OKX_official_bot/OKX_Racer?startapp=linkCode_114912129" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
-                </article>
-
                 <article class="card">
                     <div class="card-header">
                         <img src="images/mobiverse.jpg" alt="Mobiverse image">
@@ -292,6 +253,46 @@
                     </div>
                     <a href="http://t.me/mobiverse_bot/game?startapp=Mobiverse_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
+
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/boinkers.jpg" alt="Boinkers game image">
+                        <h2>Boinkers</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Huge meme coin launching soon.</li>
+                        <li>Spin wheel, build village, attack and loot.</li>
+                        <li>Earn shitcoin to get Boinkers airdropped.</li>
+                    </div>
+                    <a href="https://t.me/boinker_bot?start=boink5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/cat.jpg" alt="Catizen game image">
+                        <h2>Catizen</h2>
+                    </div>
+                    <ul class="card-content">
+                        <li>Place cats and combine them to earn coins.</li>
+                        <li>Free 2x Speed boost available every 2 hours.</li>
+                        <li>Join the Farming Pools to earn real coins.</li>
+                    </ul>
+                    <a href="https://t.me/catizenbot/gameapp?startapp=r_3_24703668" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+                           <article class="card">
+                    <div class="card-header">
+                        <img src="images/okxracer.jpg" alt="OKX Racer game image">
+                        <h2>OKX Racer</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Official game from OKX exchange.</li>
+                        <li>Predict the price change in Bitcoin and win real money.</li>
+                        <li>Guaranteed reward from estblished exchange.</li>
+                    </div>
+                    <a href="https://t.me/OKX_official_bot/OKX_Racer?startapp=linkCode_114912129" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+
 
 
                 
@@ -347,6 +348,19 @@
                         <li>Buy cards to increase passive earning rates.</li>
                     </div>
                     <a href="https://t.me/tapcoinsbot/app?startapp=ref_NRyaEk" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                                <article class="card">
+                    <div class="card-header">
+                        <img src="images/gatto.jpg" alt="Gatto game image">
+                        <h2>Gatto</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Buy biome to place your pet.</li>
+                        <li>Feed you pet and play with them to earn coins.</li>
+                        <li>Buy more pet, increase their experience to earn more.</li>
+                    </div>
+                    <a href="https://t.me/gatto_gamebot?start=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
                 -->
