--- a/index.html
+++ b/index.html
@@ -399,6 +399,9 @@
         <div class="footer-content">
             <div class="ads">
                 <iframe data-aa='2298644' src='//ad.a-ads.com/2298644?size=300x250' style='width:300px; height:250px; border:0; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+          <script src="//static.surfe.pro/js/net.js"></script>
+<ins class="surfe-be" data-sid="385863"></ins>
+<script>(adsurfebe = window.adsurfebe || []).push({});</script>
             </div>
             <div class="footer-links">
                 <a href="/privacy-policy">Privacy Policy</a>
