--- a/index.html
+++ b/index.html
@@ -230,6 +230,19 @@
 
                 <article class="card">
                     <div class="card-header">
+                        <img src="images/vertus.jpg" alt="Vertus game image">
+                        <h2>Coin Crypto</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Vertus is an wallet in Telegram and they are airdropping their wallet token using game.</li>
+                        <li>Click on Mining every 3 hours to have passive mining.</li>
+                        <li>Upgrade Cards for passive mining without doing anything.</li>
+                    </div>
+                    <a href="https://t.me/vertus_app_bot/app?startapp=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
                         <img src="images/catgold.jpg" alt="Cat Gold Miner game image">
                         <h2>Cat Gold Miner</h2>
                     </div>
@@ -309,18 +322,7 @@
                     <a href="https://t.me/BlumCryptoBot/app?startapp=ref_dtqZb0TEqK" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
-                <article class="card">
-                    <div class="card-header">
-                        <img src="images/muskempire.jpg" alt="Musk Empire game image">
-                        <h2>Musk Empire</h2>
-                    </div>
-                    <div class="card-content">
-                        <li>Tab based Game, tap to earn coins.</li>
-                        <li>Upgrade click value and maximum stored limit.</li>
-                        <li>Buy cards to increase passive earning rates.</li>
-                    </div>
-                    <a href="https://t.me/tapswap_mirror_1_bot?start=r_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
-                </article>
+
 
                 <article class="card">
                     <div class="card-header">
@@ -337,7 +339,21 @@
 
 
 
-        <!--        <article class="card">
+        <!--    
+                                <article class="card">
+                    <div class="card-header">
+                        <img src="images/muskempire.jpg" alt="Musk Empire game image">
+                        <h2>Musk Empire</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Tab based Game, tap to earn coins.</li>
+                        <li>Upgrade click value and maximum stored limit.</li>
+                        <li>Buy cards to increase passive earning rates.</li>
+                    </div>
+                    <a href="https://t.me/tapswap_mirror_1_bot?start=r_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
+                
+                <article class="card">
                     <div class="card-header">
                         <img src="images/tapcoin.jpg" alt="Tapcoin game image">
                         <h2>Tapcoin</h2>
@@ -399,9 +415,6 @@
         <div class="footer-content">
             <div class="ads">
                 <iframe data-aa='2298644' src='//ad.a-ads.com/2298644?size=300x250' style='width:300px; height:250px; border:0; padding:0; overflow:hidden; background-color: transparent;'></iframe>
-          <script src="//static.surfe.pro/js/net.js"></script>
-<ins class="surfe-be" data-sid="385863"></ins>
-<script>(adsurfebe = window.adsurfebe || []).push({});</script>
             </div>
             <div class="footer-links">
                 <a href="/privacy-policy">Privacy Policy</a>
