--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <article class="card">
                     <div class="card-header">
                         <img src="images/vertus.jpg" alt="Vertus game image">
-                        <h2>Coin Crypto</h2>
+                        <h2>Vertus</h2>
                     </div>
                     <div class="card-content">
                         <li>Vertus is an wallet in Telegram and they are airdropping their wallet token using game.</li>
