--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <h2>Feyyora.top</h2>
                     </div>
                     <div class="card-content">
-                    <li>$0.0007 every 4 minutes. Easy captcha.</li>
+                    <li>$0.0006 every 4 minutes. Easy captcha.</li>
                     <li>Offerwalls. Shortlinks, PTC.</li>
                     <li>$0.01 minimum payout to FaucetPay.</li>
                     </div>
@@ -221,7 +221,7 @@
                         <h2>Coin Crypto</h2>
                     </div>
                     <div class="card-content">
-                        <li>Get 1 spin every 10 minutes.</li>
+                        <li>Get 5 spin every 1 hour.</li>
                         <li>Make and upgrade your village.</li>
                         <li>Earn in TON and wCATCC Token. First round of Airdrop already decided.</li>
                     </div>
@@ -231,7 +231,7 @@
                 <article class="card">
                     <div class="card-header">
                         <img src="images/vertus.jpg" alt="Vertus game image">
-                        <h2>Vertus</h2>
+                        <h2>Coin Crypto</h2>
                     </div>
                     <div class="card-content">
                         <li>Vertus is an wallet in Telegram and they are airdropping their wallet token using game.</li>
@@ -248,8 +248,8 @@
                     </div>
                     <div class="card-content">
                         <li>Mine Gold. Active and Passive earning.</li>
+                        <li>Daily Cipher and Combo like in Hamster Kombat.</li>
                         <li>Earn CATGM, convert CATGM for airdrop vouchers.</li>
-                        <li>Use coins but don't spend CATGM for upgrades.</li>
                     </div>
                     <a href="https://t.me/catgoldminerbot?start=club_1001992637400_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
@@ -292,18 +292,7 @@
                     </ul>
                     <a href="https://t.me/catizenbot/gameapp?startapp=r_3_24703668" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
-                           <article class="card">
-                    <div class="card-header">
-                        <img src="images/okxracer.jpg" alt="OKX Racer game image">
-                        <h2>OKX Racer</h2>
-                    </div>
-                    <div class="card-content">
-                        <li>Official game from OKX exchange.</li>
-                        <li>Predict the price change in Bitcoin and win real money.</li>
-                        <li>Guaranteed reward from estblished exchange.</li>
-                    </div>
-                    <a href="https://t.me/OKX_official_bot/OKX_Racer?startapp=linkCode_114912129" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
-                </article>
+
 
 
 
@@ -322,7 +311,18 @@
                     <a href="https://t.me/BlumCryptoBot/app?startapp=ref_dtqZb0TEqK" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
 
-
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/pop.jpg" alt="Pop Launch game image">
+                        <h2>PoP Launch</h2>
+                    </div>
+                    <div class="card-content">
+                        <li>Pop launch is a defi luanchpad giving an airdrop.</li>
+                        <li>Tap based game. Get pop tokens on a ratio of your coin balance.</li>
+                        <li>Airdrop is ongoing and you can withdraw anytime.</li>
+                    </div>
+                    <a href="https://t.me/Poplaunchbot?start=r_1300951_5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </article>
 
                 <article class="card">
                     <div class="card-header">
@@ -400,9 +400,9 @@
                         <h2>Seed Coin</h2>
                     </div>
                     <div class="card-content">
-                        <li>Click a button to passive mine for 3 hours.</li>
+                        <li>Passive mine. Collect worms and feed it to birds.</li>
                         <li>Upgrade to increase you mining rate.</li>
-                        <li>Catch Worms, Eggs and Birds for more earning.</li>
+                        <li>Collect seed tokens and get airdropped.</li>
                     </div>
                     <a href="https://t.me/seed_coin_bot/app?startapp=5861629159" class="card-button" target="_blank" rel="noopener noreferrer">Learn More</a>
                 </article>
