--- a/games.html
+++ b/games.html
@@ -25,17 +25,16 @@
 <body>
     <header>
         <h1>Listfaucet.com - Top Faucets and Telegram Games</h1>
-   
-    <h2>All links open in a new tab</h2>
+        <h2>All links open in a new tab</h2>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Faucets</a></li>
-                <li><a href="games.html">Telegram Games</a></li>
+                <li><a href="index.html">Faucets</a></li>
+                <li><a href="games.html" class="active">Telegram Games</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="list" id="faucets-list">
+        <section class="list" id="games-list">
             <!-- Items will be dynamically loaded here -->
         </section>
     </main>
