Add or update files for GitHub Pages

--- a/games.html
+++ b/games.html
@@ -34,6 +34,7 @@
         </nav>
     </header>
     <main>
+        <p>We list the top Telegram games that are more likely to give you huge airdrops. Games that don't provide airdrop are not included.</p>
         <section class="list" id="games-list">
             <!-- Items will be dynamically loaded here -->
         </section>
