--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </nav>
     </header>
     <main>
+        <p>Join <a href="https://faucetpay.io/?r=2516" target="_blank">FaucetPay</a> if you haven't already. You'd need a microwallet like FaucetPay to withdraw your faucet earnings.</p> 
         <section class="list" id="faucets-list">
             <!-- Items will be dynamically loaded here -->
         </section>
