--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <p>We list the top Telegram games that are more likely to give you huge airdrops. Games that don't provide airdrop are not included.</p>
+        <p>Bookmark this page to use it at least a day to not miss any games. Click on Send Message button to redirect to telegram app if it doesn't automatically. We list the top Telegram games that are more likely to give you huge airdrops. Games that don't provide airdrop are not included.</p>
         <section class="list" id="games-list">
             <!-- Items will be dynamically loaded here -->
         </section>
