--- a/index.html
+++ b/index.html
@@ -1,58 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Discover the top faucets and Telegram games on Listfaucet.com. Find high-paying opportunities and exciting games with curated links and detailed reviews.">
-        <meta name="keywords" content="faucets, Telegram games, top faucets, best faucets, faucet sites, gaming faucets">
-        <meta name="robots" content="index, follow">
-        <meta property="og:title" content="Listfaucet.com - Top Faucets and Telegram Games">
-        <meta property="og:description" content="Discover top faucets and Telegram games with detailed reviews and high-paying opportunities.">
-        <meta property="og:image" content="images/og-image.jpg">
-        <meta property="og:url" content="https://www.listfaucet.com">
-        <title>Listfaucet.com - Top Faucets and Telegram Games</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-        <!-- Google Tag Manager -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MNBV9PH2F"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-6MNBV9PH2F');
-        </script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Stay updated with the latest news in cryptocurrency and blockchain technology.">
+    <title>Crypto News Site</title>
+    <link rel="stylesheet" href="assets/style.css">
+</head>
 <body>
     <header>
-        <h1>Listfaucet.com - Top Faucets and Telegram Games</h1>
-   
-    <h2>All links open in a new tab</h2>
+        <h1><a href="index.html">Crypto News</a></h1>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Faucets</a></li>
-                <li><a href="games.html">Telegram Games</a></li>
+                <li onclick="filterByTag('')">All</li>
+                <li onclick="filterByTag('Cryptocurrency')">Cryptocurrency</li>
+                <li onclick="filterByTag('Exchanges')">Exchanges</li>
+                <li onclick="filterByTag('Listing')">Listing</li>
+                <li onclick="filterByTag('Trading')">Trading</li>
+                <li onclick="filterByTag('Volume')">Volume</li>
             </ul>
         </nav>
     </header>
-    <main>
-        <p>Join <a href="https://faucetpay.io/?r=2516" target="_blank">FaucetPay</a> if you haven't already. You'd need a microwallet like FaucetPay to withdraw your faucet earnings.</p> 
-        <section class="list" id="faucets-list">
-            <!-- Items will be dynamically loaded here -->
+
+    <div class="container">
+        <!-- News Articles Column -->
+        <section class="news-column">
+            <div id="articles-list" class="articles-list"></div>
+            <div class="pagination">
+                <button class="prev-button" onclick="previousPage()">Previous</button>
+                <span id="page-indicator">Page 1</span>
+                <button class="next-button" onclick="nextPage()">Next</button>
+            </div>
         </section>
-    </main>
-    <footer>
-        <div class="footer-content">
-            <div class="ads">
-                <iframe data-aa='2298644' src='//ad.a-ads.com/2298644?size=300x250' style='width:300px; height:250px; border:0; padding:0; overflow:hidden; background-color: transparent;'></iframe>
-            </div>
-            <div class="footer-links">
-                <a href="/privacy-policy">Privacy Policy</a>
-                <a href="/terms-of-service">Terms of Service</a>
-                <a href="/contact">Contact Us</a>
-            </div>
-            <p>© 2024 Listfaucet.com. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="scripts.js"></script>
+
+        <!-- Side Column for Ads and Widgets -->
+        <aside class="sidebar">
+            <div class="ad-placeholder">Ad Space</div>
+            <div class="new-articles-placeholder">New Articles Placeholder</div>
+            <div class="widget-placeholder">Widgets Placeholder</div>
+        </aside>
+    </div>
+
+    <script src="assets/script.js"></script>
 </body>
 </html>
