--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
         </div>
       </div>
       
+                  <div class="faucet-card">
+        <div class="card-header">
+          <div class="faucet-icon"><img src="https://iili.io/Ko5eEYu.th.jpg" alt="Satoshi Faucet"></div>
+          <h3 class="faucet-title">Satoshi Faucet</h3>
+        </div>
+        <div class="bullet-list">
+          <ul>
+            <li>Multiple coins directly to Faucetpay.</li>
+            <li>High rewards on each claims.</li>
+            <li>10 seconds timer.</li>
+          </ul>
+        </div>
+        <div class="button-group">
+          <a href="https://satoshifaucet.io/?r=47022" class="btn btn-join">Join Now</a>
+        </div>
+      </div>
       
                   <div class="faucet-card">
         <div class="card-header">
@@ -362,5 +378,11 @@
   </div>
 
   <script src="main.js"></script>
+  <script>
+  document.querySelectorAll("a").forEach(link => {
+    link.setAttribute("target", "_blank");
+    link.setAttribute("rel", "noopener noreferrer");
+  });
+</script>
 </body>
 </html>
