--- a/faucets.html
+++ b/faucets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary SEO Meta -->
-    <title>Top 10 Best Crypto Faucets 2025 - Earn Free BTC, ETH, SOL, TON Instantly</title>
+    <title>Best Crypto Faucets 2025 - Earn Free BTC, ETH, SOL, TON Instantly</title>
     <meta name="description" content="Verified list of the 10 highest-paying crypto faucets in 2025. Earn free Bitcoin, Ethereum, Solana, TON, DOGE with no KYC. Instant payouts via FaucetPay. Includes Bashtronx passive earnings.">
     <meta name="keywords" content="best crypto faucets 2025, free bitcoin faucet, direct faucet, passive crypto earnings, bashtronx, coinpayz, viefaucet, coinymate, autofaucet, faucetcrypto, claimcrypto, chillfaucet, hotfaucet, satoshifaucet, bitfaucet, earn crypto free, no kyc faucet">
     <meta name="author" content="CryptoHama">
